feat: easyadmin, register, login;

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,10 +1,10 @@
 @import '~bootstrap/scss/bootstrap';
 @import "search/search";
+@import "offer/offer";
 
 body {
   background-color: white;
 }
-
 
 
 
