--- a/templates/job_offer/index.html.twig
+++ b/templates/job_offer/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container wrapper">
-        <h1>Candidate Recruitment System!</h1>
+        <div class="mb-5"><h1>Candidate Recruitment System!</h1></div>
         {% set perPage = perPage is defined?perPage:'12' %}
         {{ include('search.html.twig') }}
         {% if offers| length > 0 %}
@@ -16,11 +16,11 @@
                             {{ loop.index }}
                         </th>
                         <td>
-                            {{ offer.title }}</td>
+                            {{ offer.title }}
+                        </td>
                         <td>
-                            {{ offer.description }}</td>
-                        <td>
-                            {{ offer.dateAdded | date('d-m-Y') }}</td>
+                            {{ offer.dateAdded | date('d-m-Y') }}
+                        </td>
                         <td>
                             <a href="{{ path('apply_for_job', {'offerId': offer.id }) }}">
                                 <button type="button" class="btn btn-success">Apply</button>
@@ -34,5 +34,6 @@
         <div class="text-center list-options__pagination">
             {{ knp_pagination_render(offers) }}
         </div>
+        {#        <img src="{{ asset('images/people.jpg') }}" alt="X"> #}
     </div>
 {% endblock %}
