--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,10 +1,19 @@
 @import '~bootstrap/scss/bootstrap';
 @import "search/search";
 @import "offer/offer";
+@import "header/header";
 
 body {
   background-color: white;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
 
+  &:hover {
+    color: inherit;
+    text-decoration: underline;
+  }
+}
 
