--- a/templates/job_offer/index.html.twig
+++ b/templates/job_offer/index.html.twig
@@ -4,11 +4,19 @@
 
 {% block body %}
     <div class="container wrapper">
-        <div class="mb-5"><h1>Candidate Recruitment System!</h1></div>
+        <div class="mb-5"><h2>Candidate Recruitment System</h2></div>
         {% set perPage = perPage is defined?perPage:'12' %}
         {{ include('search.html.twig') }}
         {% if offers| length > 0 %}
             <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Position</th>
+                    <th scope="col">Date Added</th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
                 <tbody>
                 {% for offer in offers %}
                     <tr>
