--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,8 @@
             <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control mb-3"
                    autocomplete="email" required autofocus>
             <label for="password">Password</label>
-            <input type="password" name="_password" id="password" class="form-control mb-3" autocomplete="current-password"
+            <input type="password" name="_password" id="password" class="form-control mb-3"
+                   autocomplete="current-password"
                    required>
 
             <input type="hidden" name="_csrf_token"
@@ -37,9 +38,18 @@
             </div>
             #}
 
-            <button class="btn btn-lg btn-primary" type="submit">
+            <button class="btn btn-lg btn-primary mb-4" type="submit">
                 Sign in
             </button>
+
+            <div class="mb-3">
+                Don't have an account?
+            </div>
+            <div>
+                <a href="{{ path('app_register') }}">
+                    <button type="button" class="btn btn-lg btn-primary">Register</button>
+                </a>
+            </div>
         </form>
     </div>
 {% endblock %}
