--- a/templates/search.html.twig
+++ b/templates/search.html.twig
@@ -15,7 +15,7 @@
                                id="search-input"
                                checked>
                         <div class="input-group-append">
-                            <button class="btn search-form__submit" type="submit">
+                            <button class="btn btn-primary" type="submit">
                                 Search
                             </button>
                         </div>
