--- a/templates/search.html.twig
+++ b/templates/search.html.twig
@@ -10,8 +10,8 @@
                          style="background-color: white; border-bottom: 2px solid #EEE;">
                         <input type="text"
                                class="p-t-12 p-b-12 p-l-8 p-r-8 form-control search-form__input"
-                               placeholder="Java Developer..."
-                               aria-label="Java Developer..."
+                               placeholder="Scrum..."
+                               aria-label="Scrum..."
                                id="search-input"
                                checked>
                         <div class="input-group-append">
