--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
+    <body id="page-content">
         {{ render(controller('App\\Controller\\MainController::header')) }}
         {% block body %}{% endblock %}
     </body>
