--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,6 +2,7 @@
 @import "search/search";
 @import "offer/offer";
 @import "header/header";
+@import "_variables";
 
 body {
   background-color: white;
