--- a/templates/job_offer/index.html.twig
+++ b/templates/job_offer/index.html.twig
@@ -4,12 +4,12 @@
 
 {% block body %}
     <div class="container wrapper">
-        <div class="mb-3"><h5>Welcome in our</h5>
+        <div class="mb-lg-3 mb-1"><h5>Welcome in our</h5>
             <h2>Candidate Recruitment System</h2></div>
         {% set perPage = perPage is defined?perPage:'12' %}
         {{ include('search.html.twig') }}
         {% if pagination.items| length > 0 %}
-            <table class="table table-hover mt-3 mb-4">
+            <table class="table table-hover mt-3 mb-lg-4 mb-1">
                 <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -44,9 +44,8 @@
                 Sorry, no offers matching your search...
             </div>
         {% endif %}
-        <div class="text-center list-options__pagination" {{ stimulus_controller('pagination') }}>
+        <div class="d-flex justify-content-center align-items-center mt-3" {{ stimulus_controller('pagination') }}>
             {{ knp_pagination_render(pagination, 'job_offer/pagination.html.twig') }}
         </div>
     </div>
-    {#    <img src="{{ asset('images/tlo.jpg') }}" alt="X"> #}
 {% endblock %}
