style: styling btns and other

--- a/templates/job_offer/apply.html.twig
+++ b/templates/job_offer/apply.html.twig
@@ -18,7 +18,7 @@
             {{ form_row(candidateForm.lastname) }}
             {{ form_row(candidateForm.phoneNumber) }}
 
-            <button type="submit" class="btn btn-success mt-3">Apply</button>
+            <button type="submit" class="btn btn-outline-success mt-3">Apply</button>
             {{ form_end(candidateForm) }}
         </div>
     </div>
