--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container wrapper">
-        <h1>Register</h1>
+        <h2 class="mb-4">Register</h2>
 
         {{ form_errors(registrationForm) }}
 
