--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,7 +38,7 @@
             </div>
             #}
 
-            <button class="btn btn-lg btn-primary mb-4" type="submit">
+            <button class="btn btn-primary mb-4" type="submit">
                 Sign in
             </button>
 
@@ -47,7 +47,7 @@
             </div>
             <div>
                 <a href="{{ path('app_register') }}">
-                    <button type="button" class="btn btn-lg btn-primary">Register</button>
+                    <button type="button" class="btn btn-primary">Register</button>
                 </a>
             </div>
         </form>
