--- a/templates/job_offer/index.html.twig
+++ b/templates/job_offer/index.html.twig
@@ -12,7 +12,7 @@
             <table class="table table-hover mt-3 mb-lg-4 mb-1">
                 <thead>
                 <tr>
-                    <th scope="col">#</th>
+                    <th scope="col"></th>
                     <th scope="col">Position</th>
                     <th scope="col">Date Added</th>
                     <th scope="col"></th>
@@ -21,9 +21,7 @@
                 <tbody>
                 {% for offer in pagination.items %}
                     <tr>
-                        <th scope="row">
-                            {{ loop.index }}
-                        </th>
+                        <td></td>
                         <td>
                             {{ offer.title }}
                         </td>
@@ -32,7 +30,7 @@
                         </td>
                         <td>
                             <a href="{{ path('apply_for_job', {'offerId': offer.id }) }}">
-                                <button type="button" class="btn btn-success">Apply</button>
+                                <button type="button" class="btn btn-outline-success">Apply</button>
                             </a>
                         </td>
                     </tr>
@@ -44,8 +42,10 @@
                 Sorry, no offers matching your search...
             </div>
         {% endif %}
-        <div class="d-flex justify-content-center align-items-center mt-3" {{ stimulus_controller('pagination') }}>
-            {{ knp_pagination_render(pagination, 'job_offer/pagination.html.twig') }}
-        </div>
+        {% if pagination is not null %}
+            <div class="d-flex justify-content-center align-items-center mt-3" {{ stimulus_controller('pagination') }}>
+                {{ knp_pagination_render(pagination, 'job_offer/pagination.html.twig') }}
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
